# fdf

./: CMakeLists.txt  Makefile  README.md  algo.c  drawmap.c  main.c  onaction.c  parsing.c  recalculating.c
includes/: fdf.h
libft/: ft_memset.c  ft_strcmp.c  libft.h
maps/: lol.fdf
maps/maps/: t2.fdf
sources/: algorithm.c  main.c  onaction.c  parsing.c  recalculating.c
